--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>Star Wars: Behind The Magic</title>
+  <style>
+  html, body{
+    width: 100%;
+    height: 100%;
+  }
+
+  body {
+    margin: 0;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+</style>
 <link rel="icon" type="image/png" sizes="32x32" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/favicon-16x16.png">
 <!--[if IE]><link rel="shortcut icon" href="/static/img/icons/favicon.ico"><![endif]-->
@@ -27,6 +41,8 @@ if (file.match(/\.(js|css)$/)) { %>
 </head>
 <body>
   <noscript>
+    <img alt="splashscreen" src="">
+    <p>Sorry, JavaScript failed to load. Maybe try to refresh ?</p>
   </noscript>
   <div id="app"></div>
   <!-- Todo: only include in production -->
